--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: 'Inter';
-  src: url('../assets/fonts/Inter.ttf');
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter.ttf");
 }
 
-@import 'variables';
-@import 'global';
+@import "variables";
+@import "global";
